--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
 
     <string name="tutorial">Tutorial</string>
     <string name="how_to_setup_a_domain">How to set-up a domain to use?</string>
+    <string name="get_nekogram">Get Nekogram</string>
+    <string name="get_nekogram_summary">Nekogram is an open-source third-party Telegram client.</string>
 
     <string name="settings">Settings</string>
     <string name="domain">Domain</string>
